@@ -4,7 +4,7 @@ maintainer:
 former maintainer and main creator:
   Gonéri LE BOUDER <goneri@rulezlan.org>
 
-Copyright 2006-2010 OCS Inventory contributors
+Copyright 2006-2011 OCS Inventory contributors
 
 Website: http://www.ocsinventory-ng.org
 
