@@ -126,7 +126,7 @@ You can prepare a tarball from the Bazaar devel branch with following commands:
 
 COPYRIGHT
 
-  Copyright © 2006-2010 OCS Inventory Contributor
+  Copyright © 2006-2011 OCS Inventory Contributor
   released under GNU GPL 2 license
   
 AUTHORS
