@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 
-#Copyright (C) 2006-2010 OCS Inventory Developers
+#Copyright (C) 2006-2011 OCS Inventory Developers
 #
 #This program is free software; you can redistribute it and/or
 #modify it under the terms of the GNU General Public License
@@ -275,7 +275,7 @@ push your Bazaar branch on LaunchPad and do a merge request.
 
 =head1 COPYRIGHT
 
-Copyright (C) 2006-2010 OCS Inventory contributors
+Copyright (C) 2006-2011 OCS Inventory contributors
 
  This program is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
